Swagger pedido e rota de pedidos por ano
